[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/Silver.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 54
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 54
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 54
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Options" type="Popup"]
margin_right = 900.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.901961, 0.882353, 0.882353, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -148.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_right = 742.0
margin_bottom = 600.0
columns = 2

[node name="MasterVolText" type="Label" parent="MarginContainer/GridContainer"]
margin_right = 212.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="MarginContainer/GridContainer"]
margin_left = 216.0
margin_right = 742.0
margin_bottom = 61.0
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = -20.0
max_value = 0.0

[node name="MusicVolText" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 65.0
margin_right = 212.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 2 )
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="MarginContainer/GridContainer"]
margin_left = 216.0
margin_top = 65.0
margin_right = 742.0
margin_bottom = 126.0
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = -20.0
max_value = 0.0

[node name="SFXVolText" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 130.0
margin_right = 212.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 3 )
text = "SFX Volume"

[node name="SFXVolSlider" type="HSlider" parent="MarginContainer/GridContainer"]
margin_left = 216.0
margin_top = 130.0
margin_right = 742.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -20.0
max_value = 0.0

[connection signal="value_changed" from="MarginContainer/GridContainer/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/SFXVolSlider" to="." method="_on_SFXVolSlider_value_changed"]
